--- a/About.html
+++ b/About.html
@@ -192,7 +192,7 @@
         <!-- <a href="#" class="about-btn">Learn More</a> -->
       </div>
       <div class="about-image">
-        <img src="https://via.placeholder.com/600x400" alt="About Our Company" />
+        <img src="https://i.postimg.cc/KYNtQKTg/image.png" alt="About Our Company" />
       </div>
     </div>
   </section>
@@ -269,5 +269,6 @@
     });
   </script>
 </body>
+
 
 </html>
